force-app/main/default/objects/Chat_Interaction__c/Chat_Interaction__c.object-meta.xml
<CustomObject>
    <description>Store conversation sessions between candidates and Blakeney AI</description>
    <label>Chat Interaction</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Interaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>