force-app/main/default/objects/Chat_Interaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chat Interactions</relationshipLabel>
    <relationshipName>Chat_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>