force-app/main/default/objects/Chat_Interaction__c/fields/Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type__c</fullName>
    <label>Agent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flint</fullName>
            </value>
            <value>
                <fullName>Blakeney</fullName>
            </value>
            <value>
                <fullName>Admin_Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>