force-app/main/default/objects/Chat_Interaction__c/fields/AI_Model__c.field-meta.xml
<CustomField>
    <fullName>AI_Model__c</fullName>
    <description>Model used (e.g., claude-3-sonnet)</description>
    <label>AI Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>