force-app/main/default/objects/Chat_Interaction__c/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <description>User&apos;s browser info</description>
    <label>Browser</label>
    <length>100</length>
    <type>Text</type>
</CustomField>