force-app/main/default/objects/Chat_Interaction__c/fields/Chat_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Chat_Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chat Interaction</label>
    <referenceTo>Chat_Interaction__c</referenceTo>
    <relationshipLabel>Chat Interactions</relationshipLabel>
    <relationshipName>Chat_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>