force-app/main/default/objects/Chat_Interaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to candidate</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Chat_Interations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>