force-app/main/default/objects/Chat_Interaction__c/fields/Context_Type__c.field-meta.xml
<CustomField>
    <fullName>Context_Type__c</fullName>
    <label>Context Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>