force-app/main/default/objects/Chat_Interaction__c/fields/Conversation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Summary__c</fullName>
    <description>AI-generated summary</description>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>