force-app/main/default/objects/Chat_Interaction__c/fields/Conversation_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Type__c</fullName>
    <label>Conversation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job_Intake</fullName>
            </value>
            <value>
                <fullName>general</fullName>
                <label>General_Query</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>