force-app/main/default/objects/Chat_Interaction__c/fields/Employer_User__c.field-meta.xml
<CustomField>
    <fullName>Employer_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Chat Interactions (Employer User)</relationshipLabel>
    <relationshipName>Chat_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>