force-app/main/default/objects/Chat_Interaction__c/fields/Ended_At__c.field-meta.xml
<CustomField>
    <fullName>Ended_At__c</fullName>
    <description>Session end timestamp</description>
    <label>Ended At</label>
    <type>DateTime</type>
</CustomField>