force-app/main/default/objects/Chat_Interaction__c/fields/Error_Count__c.field-meta.xml
<CustomField>
    <fullName>Error_Count__c</fullName>
    <description>Number of errors in session</description>
    <label>Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>