force-app/main/default/objects/Chat_Interaction__c/fields/Extracted_Job_Data__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Job_Data__c</fullName>
    <label>Extracted Job Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>