force-app/main/default/objects/Chat_Interaction__c/fields/Full_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Full_Transcript__c</fullName>
    <description>Complete conversation JSON</description>
    <label>Full Transcript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>