force-app/main/default/objects/Chat_Interaction__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>For security/analytics</description>
    <label>IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>