force-app/main/default/objects/Chat_Interaction__c/fields/Journey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Journey_Stage__c</fullName>
    <description>Current stage in user journey</description>
    <label>Journey Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
                <default>true</default>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Intent - NOW</fullName>
            </value>
            <value>
                <fullName>Intent - LATER</fullName>
            </value>
            <value>
                <fullName>Intent - Confirm</fullName>
            </value>
            <value>
                <fullName>Active Chat</fullName>
            </value>
            <value>
                <fullName>Check-in</fullName>
            </value>
            <value>
                <fullName>Interview Prep</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>