force-app/main/default/objects/Chat_Interaction__c/fields/Message_Count__c.field-meta.xml
<CustomField>
    <fullName>Message_Count__c</fullName>
    <description>Roll-up of messages (or formula)</description>
    <label>Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>