force-app/main/default/objects/Chat_Interaction__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job_Created</fullName>
            </value>
            <value>
                <fullName>No_Action</fullName>
            </value>
            <value>
                <fullName>Follow_Up_Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>