force-app/main/default/objects/Chat_Interaction__c/fields/Related_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Job created from conversation</description>
    <label>Related Job</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Chat Interactions</relationshipLabel>
    <relationshipName>Chat_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>