force-app/main/default/objects/Chat_Interaction__c/fields/Response_Time_ms__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_ms__c</fullName>
    <label>Response Time ms</label>
    <type>TextArea</type>
</CustomField>