force-app/main/default/objects/Chat_Interaction__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>UUID for frontend tracking</description>
    <externalId>true</externalId>
    <label>Session ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>