force-app/main/default/objects/Chat_Interaction__c/recordTypes/Flint_General.recordType-meta.xml
<RecordType>
    <fullName>Flint_General</fullName>
    <active>true</active>
    <description>General employer queries</description>
    <label>Flint General</label>
</RecordType>