force-app/main/default/objects/Chat_Interaction__c/recordTypes/Flint_Job_Intake.recordType-meta.xml
<RecordType>
    <fullName>Flint_Job_Intake</fullName>
    <active>true</active>
    <description>Job creation conversations</description>
    <label>Flint Job Intake</label>
</RecordType>