force-app/main/default/objects/Chat_Interaction__c/recordTypes/Flint_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Flint_Onboarding</fullName>
    <active>true</active>
    <description>New employer onboarding</description>
    <label>Flint Onboarding</label>
</RecordType>